Update for production requirements and fix root route
