# controllers/contacts.js
@@ -11,13 +11,17 @@ const getAll = async (req, res, next) => {
 
 const getSingle = async (req, res, next) => {
     if (!ObjectId.isValid(req.params.id)) {
-        res.status(400).json('Must use a valid contact id to find a contact.');
+        return res.status(400).json('Must use a valid contact id to find a contact.');
     }
     const userId = new ObjectId(req.params.id);
     const result = await mongodb.getDb().db().collection('contacts').find({ _id: userId });
     result.toArray().then((lists) => {
-        res.setHeader('Content-Type', 'application/json');
-        res.status(200).json(lists[0]);
+        if (lists.length > 0) {
+            res.setHeader('Content-Type', 'application/json');
+            res.status(200).json(lists[0]);
+        } else {
+            res.status(404).json({ message: 'Contact not found' });
+        }
     });
 };
 
@@ -39,7 +43,7 @@ const createContact = async (req, res) => {
 
 const updateContact = async (req, res) => {
     if (!ObjectId.isValid(req.params.id)) {
-        res.status(400).json('Must use a valid contact id to update a contact.');
+        return res.status(400).json('Must use a valid contact id to update a contact.');
     }
     const userId = new ObjectId(req.params.id);
     // be aware of updateOne vs replaceOne
@@ -61,7 +65,7 @@ const updateContact = async (req, res) => {
 
 const deleteContact = async (req, res) => {
     if (!ObjectId.isValid(req.params.id)) {
-        res.status(400).json('Must use a valid contact id to delete a contact.');
+        return res.status(400).json('Must use a valid contact id to delete a contact.');
     }
     const userId = new ObjectId(req.params.id);
     const response = await mongodb.getDb().db().collection('contacts').deleteOne({ _id: userId }, true);
